--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
                     <h2>This is a header title </h2> 
                     <p>This is empty text to fill in the blank space</p>
                     <div id="test1"> Testing to see if the hyperlink works</div>
+                    <p>change git</p>
                 </div> 
             </div>
         </div>     
