Attempted to fix scaling of website

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <body>
          <div class="border">
             <div class="sidenav">
-                <div class="centertext">
+                <div class="centernavtext">
                     <a id="link" href="#test1"> go to test1</a>
                     <p>About me</p>
                     <p>3D Modeling</p>
@@ -18,11 +18,29 @@
                 </div>
             </div>
             <div class="centerbox">
-                <div id="items">
+                <div id="centerboxitems">
                     <h2>This is a header title </h2> 
                     <p>This is empty text to fill in the blank space</p>
-                    <div id="test1"> Testing to see if the hyperlink works</div>
                     <p>change git</p>
+                    <p>change git</p>
+                    <p>change git</p>
+                    <p>change git</p>
+                    <p>change git</p>
+                    <p>change git</p>
+                    <p>change git</p>
+                    <p>change git</p>
+                    <p>change git</p>
+                    <p>change git</p>
+                    <p>change git</p>
+                    <p>change git</p>
+                    <p>change git</p>
+                    <p>change git</p>
+                    <p>change git</p>
+                    <p>change git</p>
+                    <p>change git</p>
+                    <p>change git</p>
+                    <div id="test1"> Testing to see if the hyperlink works</div>
+
                 </div> 
             </div>
         </div>     
