Orginized the scss/css script a bit

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
         <title>Testsite</title>
     <body>
          <div class="border">
-            <div class="sidenav">
-                <div class="centernavtext">
+            <div class="sidebar">
+                <div class="sidebaritems">
                     <a id="link" href="#test1"> go to test1</a>
                     <p>About me</p>
                     <p>3D Modeling</p>
