redid the coding and try to make it less broken

--- a/index.html
+++ b/index.html
@@ -8,13 +8,37 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Testsite</title>
     <body>
+        <div class="sidebar">
+            <a href="#test">test</a>
+        </div> 
         <div class="centerbox">
-            <div id="centerboxitems">
-                <h2>This is a header title </h2> 
-                <p>This is empty text to fill in the blank space</p>
-                <p>change git</p>
-                <div id="test1"> Testing to see if the hyperlink works</div>
-            </div> 
+            <p>hkekee</p>
+            <p>hkekee</p>
+            <p>hkekee</p>
+            <p>hkekee</p>
+            <p>hkekee</p>
+            <p>hkekee</p>
+            <p>hkekee</p>
+            <p>hkekee</p>
+            <p>hkekee</p>
+            <p>hkekee</p>
+            <p>hkekee</p>
+            <p>hkekee</p>
+            <p>hkekee</p>
+            <p>hkekee</p>
+            <p>hkekee</p>            
+            <p>hkekee</p>
+            <p>hkekee</p>
+            <p>hkekee</p>
+            <p>hkekee</p> <p>hkekee</p> <p>hkekee</p> <p>hkekee</p> <p>hkekee</p> <p>hkekee</p>
+            <div id="test">
+                <p>test</p>
+                <p>test</p>
+                <p>test</p>
+                <p>test</p>
+
+            </div>
         </div>
+        
     </body>
 </html>
