uuuuh sidebars wigjsdgjksdjgshjg

--- a/index.html
+++ b/index.html
@@ -9,8 +9,102 @@
         <title>Testsite</title>
     <body>
         <div class="sidebar">
+
+                test
+                <br>
+                test
+                <br>
+                Test
+                <br>
+                Test
+                <br>
+                test
+                test
+                <br>
+                test
+                <br>
+                Test
+                <br>
+                Test
+                <br>
+                test
+            </div>
         </div> 
         <div class="centerbox">
+            <div class="allign-boxitems">
+                This is dummy text to test the center box.
+                <br>
+                This is dummy text to test the center box.
+                <br>
+                This is dummy text to test the center box.
+                <br>
+                This is dummy text to test the center box.
+                <br>
+                This is dummy text to test the center box.
+                <br>
+                This is dummy text to test the center box.
+                <br>
+                This is dummy text to test the center box.
+                <br>
+                This is dummy text to test the center box.
+                <br>
+                This is dummy text to test the center box.
+                <br>
+                This is dummy text to test the center box.
+                <br>
+                This is dummy text to test the center box.
+                <br>
+                This is dummy text to test the center box.
+                <br>
+                This is dummy text to test the center box.
+                <br>
+                This is dummy text to test the center box.
+                <br>
+                This is dummy text to test the center box.
+                <br>
+                This is dummy text to test the center box.
+                <br>
+                This is dummy text to test the center box.
+                <br>
+                This is dummy text to test the center box.
+                <br>
+                This is dummy text to test the center box.
+                <br>
+                This is dummy text to test the center box.
+                <br>
+                This is dummy text to test the center box.
+                <br>
+                This is dummy text to test the center box.
+                <br>
+                This is dummy text to test the center box.
+                <br>
+                This is dummy text to test the center box.
+                <br>
+                This is dummy text to test the center box.
+                <br>
+                This is dummy text to test the center box.
+                <br>
+                This is dummy text to test the center box.
+                <br>
+                This is dummy text to test the center box.
+                <br>
+                This is dummy text to test the center box.
+                <br>
+                This is dummy text to test the center box.
+                <br>
+                This is dummy text to test the center box.
+                <br>
+                This is dummy text to test the center box.
+                <br>
+                This is dummy text to test the center box.
+                <br>
+                This is dummy text to test the center box.
+                <br>
+                This is dummy text to test the center box.
+                <br>
+                This is dummy text to test the center box.
+                <br>
+            </div>
         </div>
     </body>
 </html>
