Tweaked the website

--- a/index.html
+++ b/index.html
@@ -9,100 +9,22 @@
         <title>Testsite</title>
     <body>
         <div class="sidebar">
-
-                test
+                Test
                 <br>
-                test
+                Test
                 <br>
                 Test
                 <br>
                 Test
                 <br>
-                test
-                test
-                <br>
-                test
-                <br>
                 Test
                 <br>
                 Test
-                <br>
-                test
-            </div>
         </div> 
         <div class="centerbox">
             <div class="allign-boxitems">
-                This is dummy text to test the center box.
-                <br>
-                This is dummy text to test the center box.
-                <br>
-                This is dummy text to test the center box.
-                <br>
-                This is dummy text to test the center box.
-                <br>
-                This is dummy text to test the center box.
-                <br>
-                This is dummy text to test the center box.
-                <br>
-                This is dummy text to test the center box.
-                <br>
-                This is dummy text to test the center box.
-                <br>
-                This is dummy text to test the center box.
-                <br>
-                This is dummy text to test the center box.
-                <br>
-                This is dummy text to test the center box.
-                <br>
-                This is dummy text to test the center box.
-                <br>
-                This is dummy text to test the center box.
-                <br>
-                This is dummy text to test the center box.
-                <br>
-                This is dummy text to test the center box.
-                <br>
-                This is dummy text to test the center box.
-                <br>
-                This is dummy text to test the center box.
-                <br>
-                This is dummy text to test the center box.
-                <br>
-                This is dummy text to test the center box.
-                <br>
-                This is dummy text to test the center box.
-                <br>
-                This is dummy text to test the center box.
-                <br>
-                This is dummy text to test the center box.
-                <br>
-                This is dummy text to test the center box.
-                <br>
-                This is dummy text to test the center box.
-                <br>
-                This is dummy text to test the center box.
-                <br>
-                This is dummy text to test the center box.
-                <br>
-                This is dummy text to test the center box.
-                <br>
-                This is dummy text to test the center box.
-                <br>
-                This is dummy text to test the center box.
-                <br>
-                This is dummy text to test the center box.
-                <br>
-                This is dummy text to test the center box.
-                <br>
-                This is dummy text to test the center box.
-                <br>
-                This is dummy text to test the center box.
-                <br>
-                This is dummy text to test the center box.
-                <br>
-                This is dummy text to test the center box.
-                <br>
-                This is dummy text to test the center box.
+                <br> About me: <br>
+                Welcome to SleepyInky25's Webiste!
                 <br>
             </div>
         </div>
